# unified-inbox

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  flake.nix  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: Dockerfile  pyproject.toml
core/src/unified_inbox_core/: __init__.py  __main__.py  adapter.py  animation.py  config.py  db.py  delivery.py  errors.py  main.py  media.py  models.py  router.py  telegram.py
discord-adapter/: Dockerfile  pyproject.toml
discord-adapter/src/discord_adapter/: __init__.py  __main__.py  client.py  config.py  main.py  store.py
docs/: unified-inbox.service
nix/: module.nix
scripts/: init-secrets.sh
steam-adapter/: Dockerfile  package-lock.json  package.json
steam-adapter/src/: auth.mjs  config.mjs  deliveries.mjs  files.mjs  healthcheck.mjs  history.mjs  index.mjs  message.mjs  ordering.mjs  presence.mjs  spool.mjs  steam-image.mjs
steam-adapter/test/: deliveries.test.mjs  history.test.mjs  message.test.mjs  ordering.test.mjs  presence.test.mjs  spool.test.mjs
tests/: test_adapter.py  test_animation.py  test_db.py  test_delivery.py  test_discord_client.py  test_discord_store.py  test_models_media.py  test_router.py  test_telegram.py
