[project]
name = "unified-inbox-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "unified-inbox-core",
  "unified-inbox-discord-adapter",
]

[tool.uv.sources]
unified-inbox-core = { workspace = true }
unified-inbox-discord-adapter = { workspace = true }

[tool.uv.workspace]
members = ["core", "discord-adapter"]

[dependency-groups]
dev = [
  "pyright>=1.1.400,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.15.21,<1",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["core/src", "discord-adapter/src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["core/src", "discord-adapter/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
