[project]
name = "unified-inbox-core"
version = "0.1.0"
description = "Telegram topics router for the unified inbox"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.12,<4",
]

[project.scripts]
unified-inbox-core = "unified_inbox_core.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unified_inbox_core"]
