[project]
name = "unified-inbox-discord-adapter"
version = "0.1.0"
description = "Isolated Discord user-account adapter for the unified inbox"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.12,<4",
  "discord.py-self>=2.1,<3",
]

[project.scripts]
unified-inbox-discord = "discord_adapter.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_adapter"]
